syntax = "proto3";
import "google/protobuf/empty.proto";

service WeatherForcastService
{
	rpc GetWeatherForcasts(GetWeatherForcastsRequest) returns (GetWeatherForcastsResponse);
	rpc SubstcribeWeatherForcasts(google.protobuf.Empty) returns (stream GetWeatherForcastsResponse);
}

message GetWeatherForcastsRequest
{}

message GetWeatherForcastsResponse
{
	repeated Weather list = 1;
}

message Weather
{
	string date = 1;
    int32 temperatureC = 2;
    string summary = 3;
    //public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
}
